--- a/gusk-imports-soon-page/src/styles/Home.module.css
+++ b/gusk-imports-soon-page/src/styles/Home.module.css
@@ -3,15 +3,33 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
 }
 
 .canvas{
   position: absolute;
   display: flex;
   top: 0;
-
   width: 100%;
   height: 100%;
 
+}
+
+.logoImgGusk{
+  display: flex;
+  z-index: 100;
+  margin-top: 10%;
+  margin-bottom: 50px;
+  @media (max-width: 1024px) {
+    width: 500px;
+  }
+
+
+  @media (max-width: 768px) {
+    width: 400px;
+  }
+
+
+  @media (max-width: 480px) {
+    width: 300px;
+  }
 }
