--- a/gusk-imports-soon-page/src/styles/globals.css
+++ b/gusk-imports-soon-page/src/styles/globals.css
@@ -1,9 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --font-mono: 'Comfortaa', cursive;
 
    
   
@@ -12,9 +12,11 @@
 
 
 * {
+  font-family:  var(--font-mono);
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  overflow: hidden;
 }
 
 html,
@@ -23,9 +25,7 @@ body {
   overflow-x: hidden;
 }
 
-body {
 
-}
 
 
 
