--- a/gusk-imports-soon-page/src/styles/Home.module.css
+++ b/gusk-imports-soon-page/src/styles/Home.module.css
@@ -1,8 +1,8 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
+  justify-content: center;
 }
 
 .canvas{
